--- a/client/main.css
+++ b/client/main.css
@@ -38,7 +38,7 @@ body {
 .memo-item {
   display: inline-block;
   position: relative;
-  background-color: #B4FDA5; /* 色を黄色から緑に変更 */
+  background-color: #FEC7C8; /* 変更箇所: 色を青からピンクへ */
   min-height: 200px;
   width: 300px;
   border: 1px solid rgba(200, 200, 200, 0.2);
